--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,19 +13,36 @@
     <title>Burger</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <a href="#" class="header-logo"></a>
-            <nav>
-                <ul class="header-nav">
-                    <li><a href="#" class="active">Главная</a></li>
-                    <li><a href="#">Меню</a></li>
-                    <li><a href="#">О нас</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-            </nav>
-            <button class="button">$125</button>
+    <header>
+        <div class="container">
+            <div class="header">
+                <a href="#" class="header-logo"></a>
+                <nav>
+                    <ul class="header-nav">
+                        <li><a href="#" class="active">Главная</a></li>
+                        <li><a href="#">Меню</a></li>
+                        <li><a href="#">О нас</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+                <button type="button" class="button">
+                    <span class="buttom-item">
+                        <img src="images/cart.svg" alt="Корзина">
+                        <span class="button-count">5</span>
+                    </span>
+                    <span class="button-text">$125</span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <div class="bg">
+        <div class="container">
+            <ul class="bredcrumbs">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Меню</a></li>
+            </ul>
+            <h1 class="title">Наше Меню</h1>
+            <p class="description">Выбирай из предложенного ассортимента и мы доставим блюдо в течении часа</p>
         </div>
     </div>
 </body>
-</html>
